[artf620424] -Three bugs fixed in alignment regarding android, and main pages.

--- a/phresco-framework-web/src/main/webapp/theme/photon/css/media-queries.css
+++ b/phresco-framework-web/src/main/webapp/theme/photon/css/media-queries.css
@@ -1713,7 +1713,7 @@ Width <= 1280 and height <= 800
 		height: 86% !important;
 	}
 	.feature_content_adder {
-		height: 89% !important;
+		height: 87.3% !important;
 	}
 	}
 	.main_wrapper {
