--- a/phresco-framework-web/src/main/webapp/theme/photon/css/phresco_default.css
+++ b/phresco-framework-web/src/main/webapp/theme/photon/css/phresco_default.css
@@ -6425,6 +6425,6 @@ color: #313131;
 }
 
 .configList #loadEnv {
-	height: 350px;
+	height: 450px;
 	overflow-y: auto;
 }
